CREATE TABLE IF NOT EXISTS tblSeasons (
    Id BIGINT NOT NULL AUTO_INCREMENT,
    CreatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
    UpdatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) 
    ON UPDATE CURRENT_TIMESTAMP(6),
    Void BOOLEAN NOT NULL DEFAULT FALSE,

    CONSTRAINT PK_tblSeasons PRIMARY KEY (Id)
);
